--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,33 +1,9 @@
-:root{
-   
-    /* --background-color: #131419; */
-    --background-color: #0a192f;
-    --color: #ffffff;
-    --color-light: #F4F4F4;
-    --primary-color: #2545d3;
-    /* --primary-color: #64ffda; */
-    --border-radius: 10px;
-    --navbar-height: 70px;
-    --section-min-height: 100vh;
-    --font-family: 'Roboto', sans-serif;
-    --padding: 0 100px;  
-       
-}
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    width: 100%;
-    height: 100%;
-    background: var(--color-light);
-}
-.hero{
-    background: url(../images/drop-of-water1.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
+
+.custom-card{
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.08);
 
 }
