--- a/imagery/templates/components/navbar.html
+++ b/imagery/templates/components/navbar.html
@@ -14,6 +14,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'addimage' %}" tabindex="-1" aria-disabled="true">AddImage</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'search' %}" tabindex="-1" aria-disabled="true">Search</a>
+          </li>
         </ul>
       </div>
     </div>
