fix:fixing the modals methods

--- a/imagery/templates/pages/index.html
+++ b/imagery/templates/pages/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="bg-dark">
-  <div class="container py-5">
+  <div class="container py-3">
     <h1 class="text-center text-white">
       My Gallery Photos
     </h1>
+    <p class="text-center text-white">Where you get to experience the best Photos</p>
   </div>
 </div>
 <div class="container my-3">
