fix:fixing the models

--- a/imagery/templates/pages/search.html
+++ b/imagery/templates/pages/search.html
@@ -6,8 +6,8 @@
       Search Photos
     </h1>
     <form class="col-12 col-lg-auto mb-2 d-flex" role="search" action="{% url 'searched' %}">
-      <input class="form-control me-2" name="category" type="search" placeholder="Search by category" aria-label="Search">
-      <button><i class="fa-solid fa-magnifying-glass" type="submit"></i>search</button>
+      <input class="form-control me-2" name="image" type="search" placeholder="Search by category" aria-label="Search">
+      <button>search</button>
     </form>
   </div>
 </div>
