--- a/imagery/templates/components/navbar.html
+++ b/imagery/templates/components/navbar.html
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <a class="nav-link text-dark" href="{% url 'search' %}" tabindex="-1" aria-disabled="true">Search</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" href="/admin" >Admin</a>
+          </li>
         </ul>
       </div>
     </div>
