--- a/imagery/templates/pages/searched.html
+++ b/imagery/templates/pages/searched.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
+{% block content %}
 <div class="container">
     <div class="row">
-        {% for cat in categories %}
-        <div class="col-md-4">
-            <h5 class="card-title">{{cat.title}}, Taken in:{{cat.image_location}}</h5>
-            <img class="img-responsive" src="{{cat.image.url}}" width="500" height="500" alt="">
+        {% for item in categories %}
+        
+        <div class="col-md-4 bg-primary text-white h-50">
+            <h5 class="card-title">{{item.title}}, Taken in:{{item.location}}</h5>
+            <img class="img-responsive" src="{{item.image.url}}" width="500" height="500" alt="">
             <a href="/" class="btn btn-primary btn-sm">Back</a> 
         </div>
         {% endfor %}
+        
     </div>
 </div>
 {% endblock %}
