fix:fixing the models

--- a/imagery/templates/components/footer.html
+++ b/imagery/templates/components/footer.html
@@ -1,12 +1,4 @@
-<div class="container-fluid footer">
-    <div class="row">
-        <h3>Reach us Through</h3>
-        <div class="col-md-4">
-            <p>Tel:+25472436556</p>
-            <p>galary@gmail.com</p>
-        </div>
-        <div class="col-md-4">
-
-        </div>
-    </div>
+<div class="container-fluid footer mt-5 text-center ">
+    
+    <p id="rights">&copy; <script>document.write(new Date().getFullYear())</script> Isaac kiptoo | All Rights Reserved </p>
 </div>
