--- a/imagery/templates/pages/index.html
+++ b/imagery/templates/pages/index.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="bg-dark">
-  <div class="container py-3">
-    <h1 class="text-center text-white">
+<div class="">
+  <div class="container py-1">
+    <h1 class="text-center">
       My Gallery Photos
     </h1>
-    <p class="text-center text-white">Where you get to experience the best Photos</p>
+    <p class="text-center">Where you get to experience the best Photos</p>
   </div>
 </div>
 <div class="container my-3">
