--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,8 +18,10 @@
 }
 
 .footer{
-    background-color: #1F2937;
-    color: white;
+    
+    position: fixed;
+    bottom: 0;
+    margin-top: 30px;
 }
 img:hover{
     background-color: #ECEEF3;
