feature:added the unittest to the methods

--- a/imagery/templates/pages/search.html
+++ b/imagery/templates/pages/search.html
@@ -5,10 +5,10 @@
     <h1 class="text-center text-white">
       Search Photos
     </h1>
-    <form class="col-12 col-lg-auto mb-2 d-flex" role="search" action="{% url 'searched' %}">
+    <!-- <form class="col-12 col-lg-auto mb-2 d-flex" role="search" action="{% url 'searched' %}">
       <input class="form-control me-2" name="image" type="search" placeholder="Search by category" aria-label="Search">
       <button>search</button>
-    </form>
+    </form> -->
   </div>
 </div>
 <div class="container my-3">
