styling:styled hero

--- a/imagery/templates/pages/index.html
+++ b/imagery/templates/pages/index.html
@@ -1,11 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="">
-  <div class="container py-1">
-    <h1 class="text-center">
-      My Gallery Photos
-    </h1>
-    <p class="text-center">Where you get to experience the best Photos</p>
+  <div class="container py-5">
+   <div class="row">
+    <div class="col-md-5 mt-5 hero-left">
+      <h1 class=" mt-5 ">
+        My Gallery <span class="text-dark"> Photos</span>
+      </h1>
+      <h3 class="">Where you get to <br> experience the best <br> Photos</h3>
+    </div>
+    <div class="col-md-7 img-gal">
+      <img src="/static/images/heroimage.jpeg" class="rounded-circle" alt="">
+    </div>
+   </div>
   </div>
 </div>
 <div class="container my-3">
