--- a/imagery/templates/components/navbar.html
+++ b/imagery/templates/components/navbar.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light py-3 px-4">
     <div class="container-fluid">
-      <a class="navbar-brand text-dark" href="#">GALLARYAPP</a>
+      <a class="navlog" href="#">GALLARYAPP</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
