styling:styled hero

--- a/imagery/templates/pages/addimage.html
+++ b/imagery/templates/pages/addimage.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
-<div class="bg-dark">
+<div class="">
   <div class="container py-5">
-    <h1 class="text-center text-white">
+    <h1 class="text-center ">
       Add Image
     </h1>
   </div>
