--- a/imagery/templates/components/navbar.html
+++ b/imagery/templates/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light py-3 px-4">
+<nav class="navbar navbar-expand-lg sticky-top navbar-light py-3 px-4">
     <div class="container-fluid">
       <a class="navlog" href="#">GALLARYAPP</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
