styling:styled hero

--- a/imagery/templates/pages/addimage.html
+++ b/imagery/templates/pages/addimage.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %} {% block content %}
 <div class="">
   <div class="container py-5">
-    <h1 class="text-center ">
-      Add Image
-    </h1>
+   <div class="row">
+    <div class="col-md-6  offset-md-3">
+      <h1 class="text-center py-3 add">
+        Add Image
+      </h1>
+    </div>
+   </div>
   </div>
 </div>
 <div class="container my-5 ">
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <div class="custom-card">
+      <div class="custom-card custom-card-add">
         <div class="">
           <h1 class="text-center mb-3">Add New Image</h1>
           <p class="text-center">
@@ -53,7 +57,7 @@
             <label for="file">Select image file</label>
             <input type="file" class="form-control input-lg shadow-none" name="photo" required />
         </div>
-          <button class="btn btn-primary shadow-none mt-3">UPLOAD</button>
+          <button class="btn mx-5 btn-outline-light shadow-none mt-3">UPLOAD</button>
         </form>
         </div>
       </div>
