--- a/imagery/templates/pages/search.html
+++ b/imagery/templates/pages/search.html
@@ -7,10 +7,10 @@
         Search Photos
       </h1>
     </div>
-    <!-- <form class="col-12 col-lg-auto mb-2 d-flex" role="search" action="{% url 'searched' %}">
-      <input class="form-control me-2" name="image" type="search" placeholder="Search by category" aria-label="Search">
-      <button>search</button>
-    </form> -->
+    <form class="col-12 col-lg-auto mb-2 d-flex" role="search" action="{% url 'searched' %}">
+      <input class="form-control me-2" name="category" type="search" placeholder="Search by category" aria-label="Search">
+      <button class="btn btn-outline-light"><i class="fa-solid fa-magnifying-glass" type="submit"></i>search</button>
+    </form>
   </div>
 </div>
 <div class="container my-3">
